# contrastive_vi_plus

./: .pre-commit-config.yaml  LICENSE.md  README.md  constants.py  metrics.py  pixi.toml  pyproject.toml  run_experiment.py  run_experiment_all_seeds.py
data/: datasets.py  mcfarland_2020.py  norman_2019.py  papalexi_2021.py  replogle_2022.py  utils.py
models/: base_contrastive_model.py  contrastive_dataloader.py  contrastive_vi.py  contrastive_vi_plus.py  data_splitting.py  loss_recorder.py
notebooks/: norman_2019.ipynb  papalexi_2021.ipynb  replogle_2022.ipynb  replogle_metrics.ipynb
src/contrastive_vi_plus/: __init__.py
src/contrastive_vi_plus/models/: __init__.py  _contrastive_data_splitting.py  _contrastive_dataloader.py  contrastive_vi.py  contrastive_vi_plus.py  utils.py
